fix(openid): Normalize OpenID configuration path
When the issuer has trailing `/` character, the OpenID configuration path results to be incorrectly encoded